--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <header>
     <div class="logo"></div>
     <h1>চত্বর</h1>
-    <p><em>LittleMag Chatwar - একটি সাহিত্য ওয়েবজিন</em></p>
+    <p><em>Chatwar - সাহিত্যের ওয়েবজিন</em></p>
   </header>
 
   <nav>
