--- a/index.html
+++ b/index.html
@@ -77,15 +77,24 @@
   <nav>
     <a href="#">মূলপাতা</a>
     <a href="#">প্রবন্ধ</a>
+      <div class="article">
+      <h2>সংস্কৃতি ও ইসলাম</h2>
+      <p>সভ্যতা-সংস্কৃতিকে আমি বিস্তৃতভাবে দেখি। সংস্কৃতি বলতে যেমন সঙ্গীত-নৃত্য গান বাজনা ইত্যাদিকে বোঝায় আমি ঠিক ওইভাবে বুঝি না। একটা সমাজের সভ্য যে অংশ তাকেই আমি সংস্কৃতি বলি। সভ্যতা-সংস্কৃতি এই কথার মধ্যে যার ইঙ্গিত রয়েছে। মানুষের আহার নিদ্রা যৌন আকাঙ্ক্ষা–তার যে সভ্য অংশ সবকিছু মিলিয়েই সংস্কৃতি। এভাবে একটি সমাজের সামগ্রিক যে সভ্য আচরণ, আচরণের বহিঃপ্রকাশ তাকেই মোটাদাগে সংস্কৃতি বলি।
+
+ধর্মের ভিত্তি ছাড়া কিন্তু সংস্কৃতি দাড়াতে পারে না। ধর্ম মানুষ সব সময় ভাবে, চিন্তা করে। মানুষ সব সময়ই ধর্মকেই ধরে থাকতে চায়। আবার কেউ কেউ ধর্ম থেকে দূরে থাকতে চায়, ধর্মের বৃত্তকে ভাঙার চেষ্টা করে। সংস্কৃতি আলাদা আর ধর্ম আলাদা–ইসলাম কখনও এ কথা বলেনি। ইসলাম ধর্ম সংস্কৃতির সাথে আঙাঙ্গিভাবে  জড়িত। ধর্মের যায়গায় ধর্ম থাক আর সংস্কৃতির যায়গায় সংস্কৃতি–এরকম বিভাজন ইসলাম অন্তত করেনি। 
+
+যেমন ইসলাম আমাকে মাছ খেতে নিষেধ করেনি। কিন্তু মাছকে বিশুদ্ধভাবে শিকার করে, নিয়ম সিদ্ধভাবে খেতে বলেছে। এটা তো সভ্যতারই দাবি। কুরআন মানুষকে সংস্কৃত করেছে ঠিক তবে তার মূল অভ্যাসগুলোকে পরিবর্তন করতে কখনো বলেনি। এই জাতীয় বৈশিষ্ট্য নিয়েই ইসলাম ধর্ম পৃথিবীতে ছড়িয়ে পড়েছে। 
+
+একজন স্প্যানিশ যখন ইসলাম গ্রহণ করে সে স্প্যানিশই থাকে, আরব হয়ে যায় না। তাই বলে কি সে কম মুসলমান? ইসলামে তার ত্যাগ ও অবদান কি কম? বহু জাতির বহু বৈচিত্রের নিজ নিজ সংস্কৃতির মধ্যেই ইসলাম প্রবেশ করেছে এবং সেসব সংস্কৃতিতে প্রভাব বিস্তার করেছে। কিন্তু তার জাতীয় বৈশিষ্ট্য নষ্ট করে নয়। 
+
+কাজেই যারা বলে ধর্ম ও সংস্কৃতির মধ্যে সমন্বয় সম্ভব নয়, তারা  ঠিক বলে না। যারা বলে তারা ধর্মকে ধর্মের যায়গায় রাখতে চায় এবং নিজেরা নাস্তিক হয়ে সংস্কৃতির চর্চা করতে চায়। সংস্কৃতিকে ধর্ম সাহায্য করে। আর ধর্মের উৎস ছাড়া সংস্কৃতি টিকবে কী করে?</p>
+    </div>
     <a href="#">লেখক</a>
     <a href="#">যোগাযোগ</a>
   </nav>
 
   <main>
-    <div class="article">
-      <h2>বৃষ্টিভেজা বিকেল</h2>
-      <p>মেঘলা আকাশের নিচে হেঁটে চলেছি একা। পিচঢালা রাস্তায় বৃষ্টির ফোঁটা যেন পুরনো দিনের কোনো কবিতার ছন্দ।</p>
-    </div>
+    
 
     <div class="article">
       <h2>নির্জন শহর</h2>
