--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
   </main>
 
   <footer>
-    <p>যোগাযোগ: +8801795086565 | thenawazfaijan@gmail.com</p>
-    <p>&copy; 2025 চত্বর - LittleMag Chatwar</p>
+    <p>যোগাযোগ: +8801795086565 | littlemagchatwar@gmail.com</p>
+    <p>&copy; 2025 চত্বর - Chatwar</p>
   </footer>
 </body>
 </html>
